Try fix input panel gap and update javascript
New javascript replaces blank names with X in
message now as well

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,8 @@
 
 :root,
 body,
-html {
+html,
+.input-screen {
     height: 100dvh;
     width: 100dvw;
 }
@@ -57,7 +58,6 @@ body {
 }
 
 .header {
-    position: relative;
     grid-row: 1;
     width: 80%;
     justify-self: center;
